# semanticompressor

./: README.md  pyproject.toml  sc.py
semanticompressor/: __init__.py  cli.py
