[project]
name = "semanticompressor"
version = "0.1.0"
description = "Semantic lossless compression tool for text files powered by OpenAI chat models."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
semanticompressor = "semanticompressor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["semanticompressor"]
